Remove use of deprecated feature URL(String) in ShopConfig.java